--- a/configs/nvim/coc-settings.json
+++ b/configs/nvim/coc-settings.json
@@ -1,45 +1,25 @@
 {
-  "suggest.timeout": 500,
-  "suggest.snippetIndicator": "►",
-  "languageserver": {
-
-    "ccls": {
-      "command": "ccls",
-      "filetypes": ["c", "cpp", "cuda", "objc", "objcpp"],
-      "rootPatterns": [".ccls", "compile_commands.json", ".vim/", ".git/", ".hg/"],
-      "initializationOptions": {
-        "cache": {
-          "directory": ".ccls-cache"
-        },
-        "clang": {
-          "excludeArgs": ["-Isubprojects/*/", "-I.*@sha"]
-        },
-        "codeLens": {
-          "localVariables": false
-        },
-        "completion": {
-          "maxNum": 20,
-          "detailedLabel": false,
-          "include": {
-            "blacklist": [".*/sml/.*"],
-            "suffixWhitelist": [".h", ".hpp"]
-          }
-        },
-        "request": {
-          "timeout": 500
+    "languageserver": {
+        "ccls": {
+            "command": "ccls",
+            "filetypes": [
+                "c",
+                "cpp",
+                "objc",
+                "objcpp"
+            ],
+            "rootPatterns": [
+                ".ccls",
+                "compile_commands.json",
+                ".vim/",
+                ".git/",
+                ".hg/"
+            ],
+            "initializationOptions": {
+                "cache": {
+                    "directory": "/tmp/ccls"
+                }
+            }
         }
-      }
-    },
-
-    "golang": {
-      "command": "gopls",
-      "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
-      "filetypes": ["go"]
-    },
-    "rust": {
-      "command": "ra_lsp_server",
-      "filetypes": ["rust"],
-      "rootPatterns": ["Cargo.toml"]
     }
-  }
 }
